fix(pseudoinput-fix): improve alignment and add prop typing

--- a/src/components/PseudoInput/PseudoInput.module.scss
+++ b/src/components/PseudoInput/PseudoInput.module.scss
@@ -2,7 +2,7 @@
   height: 40px;
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 
   &.s {
     height: 32px;
@@ -15,13 +15,13 @@
 .label {
   position: absolute;
   color: var(--steel-70);
-  top: -9px;
+  top: -3px;
 
   .s & {
-    top: -10px;
+    top: -2px;
   }
   .xs & {
-    top: -9px;
+    top: -3px;
   }
 
   &.error {
@@ -40,4 +40,17 @@
 .suffix {
   display: flex;
   gap: 8px;
+
+  [data-ui-pseudo-input-children] {
+    position: relative;
+    top: -2px;
+  }
+
+  .s & [data-ui-pseudo-input-children] {
+    top: 2px;
+  }
+
+  .xs & [data-ui-pseudo-input-children] {
+    top: 2px;
+  }
 }
